WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310915
[GTK] [2.52.1] WebKitDOMDOMWindow.cpp:1085:10: error: variable has incomplete type 'void'
https://bugs.webkit.org/show_bug.cgi?id=310915
Summary
[GTK] [2.52.1] WebKitDOMDOMWindow.cpp:1085:10: error: variable has incomplete...
Alberto Garcia
Reported
2026-03-27 12:02:34 PDT
In file included from build-gtk3/DerivedSources/WebKit/unified-sources/UnifiedSource-54928a2b-18.cpp:5: Source/WebKit/WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDOMWindow.cpp:1085:10: error: variable has incomplete type 'void' 1085 | auto result = handler->postMessage(*globalObject, toJS(globalObject, jsStringValue), adoptRef(*(promise.leakRef()))); | ^ This is a build failure caused by this cherry-pick:
https://commits.webkit.org/305877.279@webkitglib/2.52
In short, this makes UserMessageHandler::postMessage() return void instead of ExceptionOr<void>, but the caller still expects the latter, and it actually uses the returned value to decide whether to return TRUE or FALSE.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-03-27 13:27:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61521
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug