[GTK3] Fix the dom bindings build https://bugs.webkit.org/show_bug.cgi?id=310915

Reviewed by NOBODY (OOPS!).

305877.279@webkitglib/2.52 changed the signature of
UserMessageHandler::postMessage. Fix that so that
webkit_dom_dom_window_webkit_message_handlers_post_message() continues
to work as usual.

* Source/WebCore/page/UserMessageHandler.cpp:
(WebCore::UserMessageHandler::postMessage):
* Source/WebCore/page/UserMessageHandler.h: